# SKYHAWK-APP

./: .gitignore  .replit  design_guidelines.json  proxy.js  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  backend-hardening-gaps.md  imported-expo-fastapi-mongo-setup.md  react-router-v6-pathless-layout.md  six-feature-modules.md  stability-hardening.md
.emergent/: emergent.yml
attached_assets/: 0_Master_timesheet_1784320743486.xlsx  Pasted-1-The-logo-is-too-large-and-repeated-You-have-Eagle-ico_1784021193062.txt  Pasted-You-can-absolutely-achieve-this-style-The-Apple-Sports-_1783840578339.txt
backend/: .env.example  notifications.py  requirements.txt  server.py
backend/tests/: backend_test.py
frontend/: app.json  package-lock.json  package.json  start.sh
frontend/app/: _layout.tsx  admin-shift-swaps.tsx  announcements.tsx  change-password.tsx  employment.tsx  incidents.tsx  onboarding.tsx  payroll.tsx  settings.tsx  shift-swaps.tsx  sos.tsx  timeclock.tsx  wallet.tsx
frontend/app/(auth)/: login.tsx  register.tsx
frontend/app/(manager)/: _layout.tsx  finance.tsx  guards.tsx  index.tsx  ops.tsx  schedule.tsx
frontend/app/(tabs)/: _layout.tsx  community.tsx  index.tsx  notifications.tsx  profile.tsx  schedule.tsx  shifts.tsx  wallet.tsx
frontend/app/shift/: [id].tsx
manager-portal/: index.html  package-lock.json  package.json  serve.cjs  tailwind.config.js  vite.config.js
manager-portal/src/: App.jsx  index.css  main.jsx
memory/: PRD.md
scripts/: verify-setup.sh
test_reports/: iteration_1.json
test_reports/pytest/: pytest_results.xml
(+40 files in other folders)
