[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.1.3",
    "black>=26.5.1",
    "boto3>=1.34.129",
    "cryptography>=42.0.8",
    "email-validator>=2.2.0",
    "fastapi==0.110.1",
    "flake8>=7.3.0",
    "httpx>=0.24.0",
    "isort>=8.0.1",
    "jq>=1.6.0",
    "motor==3.3.1",
    "mypy>=2.2.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "passlib>=1.7.4",
    "pydantic>=2.6.4",
    "pyjwt>=2.10.1",
    "pymongo==4.6.3",
    "pytest>=9.1.1",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.9",
    "reportlab>=5.0.0",
    "requests>=2.31.0",
    "requests-oauthlib>=2.0.0",
    "sendgrid>=6.11.0",
    "slowapi>=0.1.10",
    "twilio>=9.0.0",
    "typer>=0.9.0",
    "tzdata>=2024.2",
    "uvicorn==0.25.0",
]
